全部功能完成（后端）
Signed-off-by: DwArFeng <915724865@qq.com>

--- a/judge-manager-distribution/pom.xml
+++ b/judge-manager-distribution/pom.xml
@@ -10,6 +10,8 @@
         <version>1.0.0.a-SNAPSHOT</version>
     </parent>
 
+    <packaging>pom</packaging>
+
     <artifactId>judge-manager-distribution</artifactId>
     <name>judge-manager-distribution</name>
     <url>http://maven.apache.org</url>
