--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.dwarfeng</groupId>
     <artifactId>judge-manager</artifactId>
-    <version>1.0.0.a</version>
+    <version>1.0.1.a</version>
 
     <packaging>pom</packaging>
 
@@ -52,7 +52,7 @@
         <dutil.version>beta-0.2.1.a</dutil.version>
         <snowflake.version>1.2.4.a</snowflake.version>
         <judge.version>1.1.1.a</judge.version>
-        <subgrade.version>beta-0.3.2.d</subgrade.version>
+        <subgrade.version>1.0.0.a</subgrade.version>
         <!-- Maven插件版本声明 -->
         <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
         <tomcat7-maven-plugin.version>2.2</tomcat7-maven-plugin.version>
@@ -366,27 +366,27 @@
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>judge-manager-stack</artifactId>
-                <version>1.0.0.a</version>
+                <version>1.0.1.a</version>
             </dependency>
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>judge-manager-impl</artifactId>
-                <version>1.0.0.a</version>
+                <version>1.0.1.a</version>
             </dependency>
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>judge-manager-node</artifactId>
-                <version>1.0.0.a</version>
+                <version>1.0.1.a</version>
             </dependency>
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>judge-manager-ui</artifactId>
-                <version>1.0.0.a</version>
+                <version>1.0.1.a</version>
             </dependency>
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>judge-manager-distribution</artifactId>
-                <version>1.0.0.a</version>
+                <version>1.0.1.a</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
