--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.dwarfeng</groupId>
     <artifactId>judge-manager</artifactId>
-    <version>1.0.1.a</version>
+    <version>1.0.2.a-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
@@ -50,8 +50,8 @@
         <slf4j.version>1.7.5</slf4j.version>
         <dozer.version>5.5.1</dozer.version>
         <dutil.version>beta-0.2.1.a</dutil.version>
-        <snowflake.version>1.2.4.a</snowflake.version>
-        <judge.version>1.1.1.a</judge.version>
+        <snowflake.version>1.3.0.a</snowflake.version>
+        <judge.version>1.1.3.a</judge.version>
         <subgrade.version>1.0.0.a</subgrade.version>
         <!-- Maven插件版本声明 -->
         <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
@@ -366,27 +366,27 @@
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>judge-manager-stack</artifactId>
-                <version>1.0.1.a</version>
+                <version>1.0.2.a-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>judge-manager-impl</artifactId>
-                <version>1.0.1.a</version>
+                <version>1.0.2.a-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>judge-manager-node</artifactId>
-                <version>1.0.1.a</version>
+                <version>1.0.2.a-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>judge-manager-ui</artifactId>
-                <version>1.0.1.a</version>
+                <version>1.0.2.a-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>judge-manager-distribution</artifactId>
-                <version>1.0.1.a</version>
+                <version>1.0.2.a-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
