--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.dwarfeng</groupId>
     <artifactId>judge-manager</artifactId>
-    <version>1.0.2.a</version>
+    <version>1.0.3.a-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
@@ -366,27 +366,27 @@
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>judge-manager-stack</artifactId>
-                <version>1.0.2.a</version>
+                <version>1.0.3.a-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>judge-manager-impl</artifactId>
-                <version>1.0.2.a</version>
+                <version>1.0.3.a-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>judge-manager-node</artifactId>
-                <version>1.0.2.a</version>
+                <version>1.0.3.a-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>judge-manager-ui</artifactId>
-                <version>1.0.2.a</version>
+                <version>1.0.3.a-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>judge-manager-distribution</artifactId>
-                <version>1.0.2.a</version>
+                <version>1.0.3.a-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
