--- a/judge-manager-impl/pom.xml
+++ b/judge-manager-impl/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>judge-manager</artifactId>
         <groupId>com.dwarfeng</groupId>
-        <version>1.0.3.a-SNAPSHOT</version>
+        <version>1.0.3.a</version>
     </parent>
 
     <artifactId>judge-manager-impl</artifactId>
